--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,35 @@ h1 {
   font-family: Impact, Charcoal, sans-serif;
 }
 
-.primary_info  {
+.primary_info, .site_analysis, h3, cite  {
   font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
-.site_analysis {
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
+.site_analysis > section {
+  position: relative;
+  z-index: 1;
+}
+
+.site_analysis > section::before {
+  content: "";
+  background: url("images/west_span_construction_01.jpg");
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;   
+}
+
+.image_sources, h3 {
+  font-style: italic;
 }
 
 code {
   font-family: "Courier New", Courier, monospace;
   font-size: 1.1em;
 }
-
-/*h2 {
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-}*/
 
 main > section {
   max-width: 80%;
@@ -34,8 +47,15 @@ img {
   max-width: 70%;
 }
 
+table, td, th { 
+  border: 1px solid gray;
+  text-align: center 
+}
+
 #rate_me {
   font-family: "Arial", Gadget, sans-serif;
+  color: white;
+  background-image: url("images/bay_bridge_at_night.jpg");
   border: 1px solid black;
   border-radius: 10px;
   margin: 10px;
@@ -85,3 +105,18 @@ a:hover {
   background: rgba(0,0,0,0.1);
 }
 
+button:hover {
+  font-size: 1.4em;
+}
+
+@media screen and (max-width: 900px) {
+  body {
+    font-size: 90%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 70%;
+  }
+}
